# CAPS

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
src/: caps.py
src/statistical_tests/: phenotype_association.py  phenotype_association_test.py
src/subtyping_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
test/: test_phenotype_association_test.py
