[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subtyping-app"
version = "0.0.0"
description = "Subtyping software application"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
"numpy", 
"pandas", 
"scipy", 
"matplotlib", 
"seaborn", 
"pytest", 
"firthmodels"]
authors = [{name = "George M. Kolodziejczyk", email = "georgemkhd@gmail.com, gk00709@surrey.ac.uk"}]

[project.optional-dependencies]
dev = ["pytest", "flake8"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
caps = "src:statistical_tests.caps:main"